force-app/main/default/objects/Material_Received_Request__c/Material_Received_Request__c.object-meta.xml
<CustomObject>
    <label>Material Received Request</label>
    <nameField>
        <label>Material Received Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Received Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>