force-app/main/default/objects/Material_Received_Request__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <label>ItemCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>