force-app/main/default/objects/Material_Received_Request__c/fields/Master_Order__c.field-meta.xml
<CustomField>
    <fullName>Master_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Material Received Requests</relationshipLabel>
    <relationshipName>Material_Received_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>