force-app/main/default/objects/Material_Received_Request__c/fields/MRRNumber__c.field-meta.xml
<CustomField>
    <fullName>MRRNumber__c</fullName>
    <label>MRR Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>