force-app/main/default/objects/Material_Received_Request__c/fields/POID__c.field-meta.xml
<CustomField>
    <fullName>POID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Id</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Material Received Requests</relationshipLabel>
    <relationshipName>Material_Received_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>