force-app/main/default/objects/Material_Received_Request__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>